--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,12 +64,12 @@ write_basic_package_version_file(
 configure_package_config_file(
 	${PROJECT_SOURCE_DIR}/${PROJECT_NAME}Config.cmake.in
 	${PROJECT_BINARY_DIR}/${PROJECT_NAME}Config.cmake
-	INSTALL_DESTINATION lib/cmake/
+	INSTALL_DESTINATION ./
 	PATH_VARS INCLUDE_DIRS LIBRARIES LIB_DIR
 	INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX}
 )
 
 install(
 	FILES ${PROJECT_BINARY_DIR}/${PROJECT_NAME}Config.cmake ${PROJECT_BINARY_DIR}/${PROJECT_NAME}ConfigVersion.cmake
-	DESTINATION lib/cmake/
+	DESTINATION ./
 )
