--- a/RubberDuckConfig.cmake.in
+++ b/RubberDuckConfig.cmake.in
@@ -1,6 +1,6 @@
 @PACKAGE_INIT@
 
-set( @PROJECT_NAME@_LIBRARIES RubberDuck) 
+set( @PROJECT_NAME@_LIBRARIES @PACKAGE_LIB_DIR@/RubberDuck.lib) 
 set( @PROJECT_NAME@_INCLUDE_DIRS  @PACKAGE_INCLUDE_DIRS@)
 set( @PROJECT_NAME@_LIBRARY_DIRS @PACKAGE_LIB_DIR@)
 
